# rustest

./: Cargo.toml  opa.txt
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs
